--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,33 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.containerWidth {
+  max-width: 65%;
+  margin: auto;
+}
+
+@media screen and (max-width: 1440px) and (min-width: 1260px){
+  .containerWidth {
+      max-width: 75%
+  }
+}
+
+@media screen and (max-width: 1259px) and (min-width: 1024px){
+  .containerWidth {
+      max-width: 80%
+  }
+}
+
+@media screen and (max-width: 1023px) and (min-width: 576px){
+  .containerWidth {
+    max-width: 81%
+  }
+}
+
+@media screen and (max-width: 575px) and (min-width: 290px){
+  .containerWidth {
+    max-width: 90%;
+  }
 }
