--- a/src/header/css/header.css
+++ b/src/header/css/header.css
@@ -4,6 +4,9 @@
 
 .headerLogoSearchBlock {
     display: flex;
+    position: relative;
+    z-index: 99;
+    flex-wrap: wrap;
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -19,6 +22,66 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+}
+
+
+
+.headerSearchInputBlock {
+    width: 100%;
+    max-height: 0;
+    overflow: hidden;
+    max-height:0;
+    height: 0;
+    transition: all 0.7s ease;
+}
+
+.headerSearchInputBlockActive {
+    max-height: 1500px;
+    height: 55px;
+    transition: all 0.7s ease;
+}
+
+.field input {
+    width: 100%;
+    padding-bottom: 5px;
+    margin-top: 15px;
+    background: 0;
+    border: 0;
+    outline: none;
+    font-size: 18px;
+    transition: padding 0.3s 0.2s ease;
+    box-sizing: border-box;
+}
+
+.field input:focus + .line:after {
+    transform: scaleX(1);
+}
+
+.field {
+    position: relative;
+}
+
+.field .line {
+    width: 100%;
+    height: 3px;
+    position: absolute;
+    bottom: -8px;
+    background: #bdc3c7;
+}
+
+.field .line:after {
+    content: " ";
+    position: absolute;
+    float: right;
+    width: 100%;
+    height: 3px;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+    background: #1abc9c;
+}
+
+.headerSearchInputBlockActive .line {
+    height: 3px;
 }
 
 .headerMobileMenuBlock {
@@ -179,7 +242,6 @@
 }
 
 /* ================================================= */
-
 .headerMenuBlock {
     border-top: 1px solid #E9E9E9; /* Border on top */
     border-bottom: 1px solid #E9E9E9; 
