--- a/src/post/css/postListMedia.css
+++ b/src/post/css/postListMedia.css
@@ -1,9 +1,3 @@
-@media screen and (max-width: 1260px) and (min-width: 1440px){
-    .textBlockTitle {
-        font-size: 22px;
-        line-height: 26px;
-    }
-}
 
 @media screen and (max-width: 1260px) and (min-width: 1440px){
     .textBlockTitle {
@@ -16,6 +10,11 @@
     .textBlockTitle {
         font-size: 21px;
         line-height: 24px;
+    }
+
+    .posts-list {
+     
+        column-gap: 40px;
     }
 
     .textBlockInfo span {
